@@ -11,7 +11,6 @@ import org.testng.annotations.Test;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -35,7 +34,7 @@ public class RealWorldExamples extends WurstScriptTest {
 
     @Test
     public void linkedHashMap() throws IOException { // see bug #478
-        Iterable<File> inputFiles = Arrays.asList(new File(BUG_DIR + "LinkedHashMap.wurst"));
+        Iterable<File> inputFiles = List.of(new File(BUG_DIR + "LinkedHashMap.wurst"));
 
         Map<String, String> inputs = Collections.emptyMap();
         String name = "linkedHashMap";
